# steam-game-recommendations

./: .gitignore  Makefile  README.md  pyproject.toml
src/pipeline/: dump.py  load.py  repartition.py  requirements.txt  split.py  transform.py
src/pipeline/sql/: append.sql  create.sql  update.sql
src/pipeline/udf/: common.py  game.py  review.py
src/webcrawlers/: requirements.txt  scrapy.cfg
src/webcrawlers/steampowered/: items.py  middlewares.py  pipelines.py  settings.py
src/webcrawlers/steampowered/spiders/: gamesonly.py  gameswithreviews.py  reviews.py
webcrawl/: requirements.txt  scrapy.cfg
webcrawl/steamstore/: items.py  middlewares.py  pipelines.py  settings.py
webcrawl/steamstore/spiders/: games.py  reviews.py
