[tool.poetry]
name = "steam-game-recommendations"
version = "0.1.0"
description = "Building an open hybrid recommender system for Steam"
authors = ["Anton Kozyriev"]
readme = "README.md"
packages = [
    {include = "engine", from = "src"},
    {include = "insights", from = "src"},
    {include = "processing", from = "src"},
    {include = "webcrawlers", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.0.285"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.webcrawl.dependencies]
scrapy = "^2.10.0"

[tool.poetry.group.webcrawl]
optional = true

[tool.poetry.group.pipeline.dependencies]
pyspark = "3.1.1"
psycopg = {extras = ["binary"], version = "^3.1.10"}

[tool.poetry.group.pipeline]
optional = true

[tool.black]
line-length = 88
target_version = ['py310']
preview = true

[tool.ruff]
select = ["A", "B", "C4", "E", "EM", "F", "I001", "Q", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = 7.4
addopts = "-ra -q"
pythonpath = "src"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

