[tool.poetry]
name = "steam-game-recommendations"
version = "0.1.0"
description = "Building an open hybrid recommender system for Steam"
authors = ["Anton Kozyriev"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
ruff = "^0.1.5"

[tool.poetry.group.webcrawl.dependencies]
scrapy = "^2.12.0"

[tool.poetry.group.webcrawl]
optional = true

[tool.black]
line-length = 88
target_version = ['py312']
preview = true

[tool.ruff]
select = ["A", "B", "C4", "E", "EM", "F", "I001", "Q", "UP"]
ignore = ["B008", "E501", "EM101", "EM102", "C417", "UP008", "UP028"]

[tool.pytest.ini_options]
minversion = 7.4
addopts = "-ra -q"
pythonpath = "src"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
